tests/integration/traits/errors/quant-trait/main.cx
trait E {
  foo(self): self
}

fun f<a>(a: a) {
  foo(a)
}
